# sfm

./: README.md  requirements.txt  run_sfm.py
Ceres Solver/: CMakeLists copy.txt  CMakeLists.txt  main.cpp  readme.md
Datasets/Fountain/: K.txt
Datasets/Tin/: K.txt
Datasets/condorcet/: K.txt
Helper Functions/: 3dviewer.py  Calibration.py  removebg.py
results/: BOX.ply  BOX_cams.ply  Duck.ply  Duck_cams.ply  GustavIIAdolf.ply  GustavIIAdolf_cams.ply  Tin.ply  Tin_cams.ply  con.ply  condorcet_cams.ply  fountain.ply
sfm_pipeline/: __init__.py  bundle_adjust.py  feature_matcher.py  image_loader.py  ply_generator.py  pnp_solver.py  point_utils.py  reprojection.py  triangulation.py
